# NexaNest

./: .env.db.example  .env.example  .gitignore  .markdownlint.json  .mcp.json  CLAUDE.md  Makefile  NN-Project-Management.md  NexaNest-New.md  README.md  TODO.md.archived  docker-compose.yml  main.py  mkdocs.yml  pyproject.toml
.github/: labels.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  scope_change_request.md  technical_debt.md
.github/workflows/: issue-management.yml  project-automation.yml
docs/: index.md  mission-vision.md
docs/architecture/: ARCHITECTURE.md  adr-015-database-deployment-strategy.md  adrs.md
docs/database/: connectivity.md  index.md
docs/deployment/: database-deployment-log.md
docs/development/: IMPLEMENTATION_PLAN.md  commit-practices.md
docs/devlog/: index.md
docs/infrastructure/: database-host-setup.md  remote-docker-setup.md  secrets-management.md  ssh-access-setup.md  swarm-setup-prompt.md
docs/project-management/: DOCUMENTATION_STRATEGY.md  INTEGRATION_GUIDE.md  LABELING_GUIDE.md  PROJECT_BOARDS_GUIDE.md  README.md  REPORTING_DASHBOARDS.md  TODO_MIGRATION.md
docs/templates/: ADR_TEMPLATE.md  FEATURE_SPEC_TEMPLATE.md  RUNBOOK_TEMPLATE.md
frontend/: package.json
infrastructure/database/: README.md  postgres.conf  (+2 more)
nexanest/: __init__.py
scripts/: build-and-push.sh  configure-registry.sh  db-manage.sh  deploy-database.sh  lint-docs-simple.sh  lint-docs.sh  quickstart.sh  registry-manage.sh  setup-registry.sh  setup-remote-docker.sh  setup-secrets.sh  setup-ssh-access.sh  swarm-manage.sh
(+26 files in other folders)
