[project]
name = "nexanest"
version = "0.1.0"
description = "AI-Powered Investment Portfolio Management Platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.5.0",
    "mkdocs-mermaid2-plugin>=1.1.1",
    "pymdown-extensions>=10.5",
    "mkdocs-git-revision-date-localized-plugin>=1.2.2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []

[tool.uv]
dev-dependencies = [
    "ipython>=8.18.0",
    "ruff>=0.11.12",
]
